# matrixd

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README_en.md  README_zh.md  matrixd.example.json  matrixd.example.jsonc  matrixd.example.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  index.md
docs/api/: index.md
docs/examples/: index.md
docs/usage/: configuration.md  index.md  installation.md  listener.md
src/matrixd/: __init__.py  cli.py
src/matrixd/_vendor/: __init__.py
src/matrixd/core/: __init__.py  client.py  config.py  listener.py  policy.py
src/matrixd/delivery/: __init__.py  base.py  exec_cmd.py  stdout.py  webhook.py
src/matrixd/servers/: __init__.py  mcp.py  rest.py
