[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrixd"
version = "0.1.0"
description = "Matrix agent daemon — listener, tools, and hooks for AI agents. Supports MCP, REST, webhook, and CLI modes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Oaklight", email = "dev@oaklight.cn" }]
keywords = [
    "matrix",
    "agent",
    "mcp",
    "chatbot",
    "daemon",
    "listener",
    "webhook",
    "openclaw",
    "claude-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
full = ["matrixd[yaml,mcp,api]"]
dev = [
    "matrixd[full]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
matrixd = "matrixd.cli:main"

[project.urls]
Homepage = "https://github.com/Oaklight/matrixd"
Repository = "https://github.com/Oaklight/matrixd"
Issues = "https://github.com/Oaklight/matrixd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/matrixd"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
